backends/drm: fix night light not being applied with ICC profiles

As we opportunistically use KMS outside of ICC profiles to apply night light,
we need to explicitly set the shader fallback option to make it be applied in
shaders instead.

BUG: 492890